--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -121,10 +121,11 @@
     - name: Create route 
       paloaltonetworks.panos.panos_static_route:
         provider: '{{ device }}'
-        name: 'Test-One'
+        name: 'route'
         destination: '0.0.0.0/0'
         nexthop: '20.20.2.1'
         metric: "10"
+        vr_name: 'vr-1'
         
 
     - name: Create route 'vpn'
@@ -135,7 +136,7 @@
         interface: 'tunnel.100'
         nexthop_type: 'none'
         metric: "10"
-        
+        vr_name: 'vr-1'
 
     - name: Add IKE crypto config to the firewall
       paloaltonetworks.panos.panos_ike_crypto_profile:
