--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -121,7 +121,7 @@
     - name: Create route 
       paloaltonetworks.panos.panos_static_route:
         provider: '{{ device }}'
-        vr_name: 'vr-1'
+        virtual_router: 'vr-1'
         name: 'route'
         destination: '0.0.0.0/0'
         nexthop: '20.20.2.1'
@@ -132,7 +132,7 @@
     - name: Create route 'vpn'
       paloaltonetworks.panos.panos_static_route:
         provider: '{{ device }}'
-        vr_name: 'vr-1'
+        virtual_router: 'vr-1'
         name: 'ROUTE VPN'
         destination: '192.168.0.0/16'
         interface: 'tunnel.100'
