--- a/hello.yaml
+++ b/hello.yaml
@@ -7,7 +7,7 @@
     - name: Configure interface FastEthernet
       ios_command:
         commands:
-          - conf t
+          - conf 
           - interface FastEthernet0/0
           - ip address 20.20.1.1 255.255.255.0
           - no shutdown
